Added code comments

--- a/apiv02.ipynb
+++ b/apiv02.ipynb
@@ -10,7 +10,7 @@
     "from requests import get\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
@@ -16098,7 +16098,8 @@
     }
    ],
    "source": [
-    "response.json()"
+    "response.json()\n",
+    "#outputs api response as json"
    ]
   },
   {
@@ -76730,7 +76731,8 @@
     }
    ],
    "source": [
-    "print(wjdata)\n"
+    "print(wjdata)\n",
+    "#nicer form of json\n"
    ]
   },
   {
@@ -77898,7 +77900,9 @@
    "source": [
     "for element in urls:\n",
     "    if element['type'] == 'iDeveloper':\n",
-    "        print(element['uri'])"
+    "        print(element['uri'])\n",
+    "        \n",
+    "#sources all uri when an estate is \"iDeveloper\" type"
    ]
   },
   {
@@ -79296,7 +79300,9 @@
    "source": [
     "for element in urls:\n",
     "    if element['type'] == '':\n",
-    "        print(element['uri'])"
+    "        print(element['uri'])\n",
+    "        \n",
+    "#sources all uri when an estate is null type - private offerings"
    ]
   },
   {
